--- a/RTE/test-output/old/Default suite/methods.html
+++ b/RTE/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd919f">  <td>22/05/06 14:25:38</td>   <td>0</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@4310d43]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="bd919f">  <td>22/05/09 18:01:03</td>   <td>0</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@4310d43]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
-<tr bgcolor="bd919f">  <td>22/05/06 14:26:11</td>   <td>33537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@4310d43]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
-<tr bgcolor="bd919f">  <td>22/05/06 14:27:08</td>   <td>89990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@4310d43]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
-<tr bgcolor="ab778a">  <td>22/05/06 14:26:11</td>   <td>33544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEJobSearch.getRTETrackingNo()[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@4310d43]">getRTETrackingNo</td> 
+<tr bgcolor="ab778a">  <td>22/05/09 18:01:31</td>   <td>27776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEJobProcessing.rteOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@4310d43]">rteOrderProcess</td> 
   <td>main@150138649</td>   <td></td> </tr>
-<tr bgcolor="bd919f">  <td>22/05/06 14:27:08</td>   <td>90202</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@4310d43]">&lt;&lt;SendEmail</td> 
+<tr bgcolor="bd919f">  <td>22/05/09 18:03:23</td>   <td>139987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@4310d43]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="bd919f">  <td>22/05/09 18:03:23</td>   <td>140105</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@4310d43]">&lt;&lt;SendEmail</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="bd919f">  <td>22/05/09 18:01:31</td>   <td>27769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@4310d43]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
 </table>
