--- a/RTE/test-output/old/Default suite/classes.html
+++ b/RTE/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>rte_RTEJobCreation.RTEJobSearch</td>
+<td>rte_RTEJobCreation.RTEJobProcessing</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>getRTETrackingNo</td>
+<td>rteOrderProcess</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
