Changes of 11th May 2022

--- a/RTE/Report/ExtentReport/ExtentReportResults.html
+++ b/RTE/Report/ExtentReport/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-05-10 11:18:14</span>
+					<span class='suite-started-time'>2022-05-11 18:22:02</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 2m 40s+765ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 6m 47s+13ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 2m 40s+765ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 6m 47s+13ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-05-10 11:15:34</span> 
+							<span class='panel-lead suite-started-time'>2022-05-11 18:15:15</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-05-10 11:18:14</span> 
+							<span class='panel-lead suite-ended-time'>2022-05-11 18:22:02</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,15 +237,15 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='29729628-c357-444e-8e69-d4c41ef0f9ad'>
+										<li class='collection-item test displayed active pass ' extentid='89612a7b-8453-405e-b045-7ad85b852571'>
 											<div class='test-head'>
-												<span class='test-name'>rteJobSearch </span>
+												<span class='test-name'>rteOrderProcess </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-10 11:15:58</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-11 18:20:02</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -264,13 +264,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>11:18:11</td>
-																	<td class='step-details'>Test Case Pass is rteJobSearch</td>
+																	<td class='timestamp'>18:21:58</td>
+																	<td class='step-details'>Test Case Pass is rteOrderProcess</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>11:18:11</td>
-																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteJobSearch.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteJobSearch.png' /></a></td>
+																	<td class='timestamp'>18:21:59</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteOrderProcess.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteOrderProcess.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
