--- a/RTE/test-output/emailable-report.html
+++ b/RTE/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">132,845</td><td></td><td></td></tr>
+<tr><th colspan="8">RTE Job Smoke</th></tr>
+<tr><td><a href="#t0">RTE Job Processing</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">383,756</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">rte_RTEJobCreation.RTEJobSearch</td><td><a href="#m0">rteJobSearch</a></td><td rowspan="1">1652161558947</td><td rowspan="1">132668</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">RTE Job Smoke</th></tr></tbody><tbody id="t0"><tr><th colspan="4">RTE Job Processing &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">rte_RTEJobCreation.RTEJobProcessing</td><td><a href="#m0">rteOrderProcess</a></td><td rowspan="1">1652273402482</td><td rowspan="1">116435</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">rte_RTEJobCreation.RTEJobSearch#rteJobSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>RTE Job Processing</h2><h3 id="m0">rte_RTEJobCreation.RTEJobProcessing#rteOrderProcess</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
