Changes of 23rd May 2022

--- a/RTE/test-output/old/RTE Job Smoke/methods.html
+++ b/RTE/test-output/old/RTE Job Smoke/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>RTE Job Smoke</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd919f">  <td>22/05/18 10:52:43</td>   <td>0</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&lt;&lt;SendEmail</td> 
+<tr bgcolor="6be399">  <td>22/05/20 20:43:15</td>   <td>0</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
-<tr bgcolor="bd919f">  <td>22/05/18 10:45:54</td>   <td>-409719</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
-<tr bgcolor="ab778a">  <td>22/05/18 10:50:50</td>   <td>-113843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEJobProcessing.rteOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">rteOrderProcess</td> 
+<tr bgcolor="99b8e7">  <td>22/05/20 20:43:52</td>   <td>37335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEJobProcessing.rteOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">rteOrderProcess</td> 
   <td>main@754177595</td>   <td></td> </tr>
-<tr bgcolor="bd919f">  <td>22/05/18 10:50:50</td>   <td>-113845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&gt;&gt;testMethodName</td> 
+<tr bgcolor="6be399">  <td>22/05/20 21:00:19</td>   <td>1023613</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&lt;&lt;SendEmail</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="6be399">  <td>22/05/20 20:43:52</td>   <td>37327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&gt;&gt;testMethodName</td> 
 <td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
-<tr bgcolor="ab778a">  <td>22/05/18 10:46:20</td>   <td>-383285</td> <td>&nbsp;</td><td title="&gt;&gt;RTEJobProcessing.getTrackPickUPID()[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&gt;&gt;getTrackPickUPID</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
-<tr bgcolor="bd919f">  <td>22/05/18 10:52:43</td>   <td>-161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&lt;&lt;getResult</td> 
+<tr bgcolor="6be399">  <td>22/05/20 21:00:18</td>   <td>1023497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEJobProcessing@26e356f0]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
 </table>
