Changes of 20th June 2022

--- a/RTE/test-output/old/RTE Job Smoke/classes.html
+++ b/RTE/test-output/old/RTE Job Smoke/classes.html
@@ -191,7 +191,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>rteRejectResendScen</td>
+<td>rteRejectResendScan</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
