--- a/RTE/test-output/old/Default suite/methods.html
+++ b/RTE/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>22/06/15 20:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@72e5a8e]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/15 20:42:27</td>   <td>308</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@72e5a8e]">&lt;&lt;SendEmail</td> 
+<tr bgcolor="a7f793">  <td>22/06/20 18:32:50</td>   <td>0</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.CreateMergeRTEwithLOC@72e5a8e]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/15 19:47:41</td>   <td>-3285998</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@72e5a8e]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="a7f793">  <td>22/06/20 18:42:01</td>   <td>551154</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.CreateMergeRTEwithLOC@72e5a8e]">&lt;&lt;SendEmail</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/15 19:48:11</td>   <td>-3255995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@72e5a8e]">&gt;&gt;testMethodName</td> 
+<tr bgcolor="a7f793">  <td>22/06/20 18:42:01</td>   <td>550968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.CreateMergeRTEwithLOC@72e5a8e]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>22/06/15 19:48:11</td>   <td>-3255982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTECrudOperations.rteCrudOperations()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@72e5a8e]">rteCrudOperations</td> 
+<tr bgcolor="b09ffa">  <td>22/06/20 18:33:12</td>   <td>21893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateMergeRTEwithLOC.createMergeRTEWithLOCJob()[pri:0, instance:rte_RTEJobCreation.CreateMergeRTEwithLOC@72e5a8e]">createMergeRTEWithLOCJob</td> 
   <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/06/20 18:33:12</td>   <td>21885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.CreateMergeRTEwithLOC@72e5a8e]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
 </table>
