--- a/RTE/test-output/old/RTE Job Smoke/methods.html
+++ b/RTE/test-output/old/RTE Job Smoke/methods.html
@@ -1,50 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>RTE Job Smoke</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:16:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEGetPUpID@72e5a8e]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>22/06/13 18:16:57</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEGetPUpID.getTrackPickUPID()[pri:0, instance:rte_RTEJobCreation.RTEGetPUpID@72e5a8e]">getTrackPickUPID</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:32:04</td>   <td>906963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEGetPUpID@72e5a8e]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:32:04</td>   <td>907127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@63376bed]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="98dc9b">  <td>22/06/13 18:32:04</td>   <td>907127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToOneOrderProcess.rteOneToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@63376bed]">rteOneToOneOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:32:10</td>   <td>913224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@63376bed]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:32:18</td>   <td>921059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@3e27aa33]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a6a482">  <td>22/06/13 18:32:10</td>   <td>913422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToManyOrderProcess.rteOneToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@3e27aa33]">rteOneToManyOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:32:10</td>   <td>913422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@3e27aa33]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:32:18</td>   <td>921205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@740cae06]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:21</td>   <td>1343954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@740cae06]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="cdf8bd">  <td>22/06/13 18:32:18</td>   <td>921205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToOneOrderProcess.rteManyToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@740cae06]">rteManyToOneOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:27</td>   <td>1350546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@6d4d66d2]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:21</td>   <td>1344085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@6d4d66d2]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="d4ae6f">  <td>22/06/13 18:39:21</td>   <td>1344085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToManyOrderProcess.rteManyToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@6d4d66d2]">rteManyToManyOrderProcess</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:28</td>   <td>1350689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@53fe15ff]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a4ebf2">  <td>22/06/13 18:39:28</td>   <td>1350689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEFlowWithRejectResend.rteRejectResendScen()[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@53fe15ff]">rteRejectResendScen</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:34</td>   <td>1357537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@53fe15ff]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:34</td>   <td>1357657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@15bb5034]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:16:21</td>   <td>-35988</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@15bb5034]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:40</td>   <td>1362681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@15bb5034]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="9175d8">  <td>22/06/13 18:39:34</td>   <td>1357657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTECrudOperations.rteCrudOperations()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@15bb5034]">rteCrudOperations</td> 
-  <td>main@1058609221</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/06/13 18:39:40</td>   <td>1362798</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@15bb5034]">&lt;&lt;SendEmail</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058609221</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 14:51:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEGetPUpID@7d4f9aae]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>22/06/20 14:51:32</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEGetPUpID.getTrackPickUPID()[pri:0, instance:rte_RTEJobCreation.RTEGetPUpID@7d4f9aae]">getTrackPickUPID</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:24:56</td>   <td>2004045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEGetPUpID@7d4f9aae]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="ba6dae">  <td>22/06/20 15:24:56</td>   <td>2004207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToOneOrderProcess.rteOneToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@3c77d488]">rteOneToOneOrderProcess</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:25:04</td>   <td>2012861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@3c77d488]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:24:56</td>   <td>2004206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToOneOrderProcess@3c77d488]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:25:05</td>   <td>2012990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@750e2b97]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="b9b6d7">  <td>22/06/20 15:25:05</td>   <td>2012990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToManyOrderProcess.rteOneToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@750e2b97]">rteOneToManyOrderProcess</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:34:36</td>   <td>2584769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@750e2b97]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:41:48</td>   <td>3016246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@f0c8a99]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="7f7f70">  <td>22/06/20 15:34:36</td>   <td>2584925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToOneOrderProcess.rteManyToOneOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@f0c8a99]">rteManyToOneOrderProcess</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:34:36</td>   <td>2584925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToOneOrderProcess@f0c8a99]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:52:32</td>   <td>3660918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@54c5a2ff]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="86b1bb">  <td>22/06/20 15:41:48</td>   <td>3016386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToManyOrderProcess.rteManyToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@54c5a2ff]">rteManyToManyOrderProcess</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:41:48</td>   <td>3016386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@54c5a2ff]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="6f8380">  <td>22/06/20 15:52:33</td>   <td>3661175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEFlowWithRejectResend.rteRejectResendScan()[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@2e8c1c9b]">rteRejectResendScan</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:52:33</td>   <td>3661175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@2e8c1c9b]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:57:21</td>   <td>3949931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEFlowWithRejectResend@2e8c1c9b]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="e4deb0">  <td>22/06/20 15:57:22</td>   <td>3950149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTECrudOperations.rteCrudOperations()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@7d0b7e3c]">rteCrudOperations</td> 
+  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 15:57:22</td>   <td>3950149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@7d0b7e3c]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 16:17:22</td>   <td>5150311</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@7d0b7e3c]">&lt;&lt;SendEmail</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 16:17:22</td>   <td>5150065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@7d0b7e3c]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/06/20 14:51:11</td>   <td>-20730</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTECrudOperations@7d0b7e3c]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1000966072</td>   <td></td> </tr>
 </table>
