Changes of PU and Del stop enable disable 7th July

--- a/RTE/Report/ExtentReport/ExtentReportResults.html
+++ b/RTE/Report/ExtentReport/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-06-30 14:17:28</span>
+					<span class='suite-started-time'>2022-07-07 19:42:42</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 4m 38s+603ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 3m 27s+311ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 4m 38s+603ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 3m 27s+311ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-06-30 14:12:49</span> 
+							<span class='panel-lead suite-started-time'>2022-07-07 19:39:15</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-06-30 14:17:28</span> 
+							<span class='panel-lead suite-ended-time'>2022-07-07 19:42:42</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,15 +237,15 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='84462d59-8fde-477d-8093-ba9d0cbfe11c'>
+										<li class='collection-item test displayed active pass ' extentid='193478b0-9273-4df1-b6f7-4524243af3b8'>
 											<div class='test-head'>
-												<span class='test-name'>rteManyToOneOrderProcess </span>
+												<span class='test-name'>rteCompareCharges </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-30 14:13:13</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-07 19:39:36</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -264,13 +264,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>14:17:23</td>
-																	<td class='step-details'>Test Case Pass is rteManyToOneOrderProcess</td>
+																	<td class='timestamp'>19:42:37</td>
+																	<td class='step-details'>Test Case Pass is rteCompareCharges</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>14:17:23</td>
-																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteManyToOneOrderProcess.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteManyToOneOrderProcess.png' /></a></td>
+																	<td class='timestamp'>19:42:37</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteCompareCharges.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteCompareCharges.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
